--- a/menu.css
+++ b/menu.css
@@ -1,20 +1,20 @@
 #cssmenu ul {
   margin: 0;
   padding: 7px 6px 0;
-  background: #EF4136 url(overlay.png) repeat-x 0 -110px;
+  background: #ef4136 url(overlay.png) repeat-x 0 -110px;
   line-height: 100%;
   border-radius: 1em;
   font: normal 0.5333333333333333em Arial, Helvetica, sans-serif;
   -webkit-border-radius: 5px;
   -moz-border-radius: 5px;
-  border-radius: 5px;
+  border-radius: 0px;
   -webkit-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.4);
   -moz-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.4);
   width: 672px;
 }
 #cssmenu li {
-  margin: 0 5px;
-  padding: 0 0 8px;
+  margin: 0 0px;
+  padding: 0 0 0px;
   float: left;
   position: relative;
   list-style: none;
@@ -23,7 +23,7 @@
 #cssmenu a:link {
   font-weight: bold;
   font-size: 13px;
-  color: #e7e5e5;
+  color: #ffffff;
   text-decoration: none;
   display: block;
   padding: 8px 20px;
@@ -31,16 +31,16 @@
   border-radius: 5px;
   -webkit-border-radius: 5px;
   -moz-border-radius: 5px;
-  text-shadow: 0 1px 1px rgba(0, 0, 0, 0.3);
+  text-shadow: 0 0px 0px rgba(0, 0, 0, 0);
 }
 #cssmenu a:hover {
   background: #000;
-  color: #fff;
+  color: #000;
 }
 #cssmenu .active a,
 #cssmenu li:hover > a {
-  background: #99d846 url(overlay.png) repeat-x 0 -40px;
-  background: #666666 url(overlay.png) repeat-x 0 -40px;
+  background: #ef4136 url(overlay.png) repeat-x 0 -40px;
+  background: #ffffff url(overlay.png) repeat-x 0 -40px;
   color: #444;
   border-top: solid 1px  #f8f8f8;
   -webkit-box-shadow: 0 1px 1px rgba(0, 0, 0, 0.2);
@@ -57,11 +57,11 @@
   -moz-box-shadow: none;
 }
 #cssmenu ul ul a:hover {
-  background: #80c229 url(overlay.png) repeat-x 0 -100px !important;
+  background: #ef4136 url(overlay.png) repeat-x 0 -100px !important;
   color: #fff !important;
-  -webkit-border-radius: 5px;
-  -moz-border-radius: 5px;
-  border-radius: 5px;
+  -webkit-border-radius: 0px;
+  -moz-border-radius: 0px;
+  border-radius: 0px;
   text-shadow: 0 1px 1px rgba(0, 0, 0, 0.1);
 }
 #cssmenu li:hover > ul {
@@ -77,10 +77,10 @@
   top: 40px;
   left: 0;
   background: #ffffff url(overlay.png) repeat-x 0 0;
-  border: solid 1px #b4b4b4;
-  -webkit-border-radius: 5px;
-  -moz-border-radius: 5px;
-  border-radius: 5px;
+  border: solid 1px #ffffff;
+  -webkit-border-radius: 0px;
+  -moz-border-radius: 0px;
+  border-radius: 0px;
   -webkit-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.3);
   -moz-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.3);
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.3);
